fixing style on mobile  size

--- a/client/src/components/OrderToPrepareCard/style.css
+++ b/client/src/components/OrderToPrepareCard/style.css
@@ -84,3 +84,9 @@
     width: 320px;
   }
 }
+
+@media screen and (max-width: 600px) {
+  .order-to-prepare-card-container {
+    width: 300px;
+  }
+}
